test/semantic_error/se_rv_const_def.c0
const int do = 1;
int f() {}
